------------------
Pylint's ChangeLog
------------------

What's New in Pylint 2.14.0?
============================
Release date: TBA

..
  Put new features here and also in 'doc/whatsnew/2.14.rst'


* ``potential-index-error``: Emitted when the index of a list or tuple exceeds its length.
  This checker is currently quite conservative to avoid false positives. We welcome
  suggestions for improvements.

  Closes #578

* Added new checker ``unnecessary-list-index-lookup`` for indexing into a list while
  iterating over ``enumerate()``.

  Closes #4525

* Fix false negative for ``no-member`` when attempting to assign an instance
  attribute to itself without any prior assignment.

  Closes #1555

* Fix bug where specifically enabling just ``await-outside-async`` was not possible.

..
  Insert your changelog randomly, it will reduce merge conflicts
  (Ie. not necessarily at the end)


What's New in Pylint 2.13.4?
============================
Release date: TBA

* Include ``testing_pylintrc`` in source and wheel distributions.

  Closes #6028


What's New in Pylint 2.13.3?
============================
Release date: 2022-03-29

* Fix false positive for ``unnecessary-ellipsis`` when using an ellipsis as a default argument.

  Closes #5973

* Fix crash involving unbalanced tuple unpacking.

  Closes #5998

* Fix false positive for 'nonexistent-operator' when repeated '-' are
  separated (e.g. by parens).

  Closes #5769


What's New in Pylint 2.13.2?
============================
Release date: 2022-03-27

* Fix crash when subclassing a ``namedtuple``.

  Closes #5982

* Fix false positive for ``superfluous-parens`` for patterns like
  "return (a or b) in iterable".

  Closes #5803

* Fix a false negative regression in 2.13.0 where ``protected-access`` was not
  raised on functions.

  Fixes #5989

* Better error messages in case of crash if pylint can't write the issue template.

  Refer to #5987


What's New in Pylint 2.13.1?
============================