@@ -1,0 +1,6 @@
+three = str(3.0)
+twelve = "1" + "2"
+
+
+def is_bigger_than_two(x):
+    return x > 2
