@@ -12,6 +12,10 @@ Summary -- Release highlights
 New checkers
 ============
 
+* Add new check ``unnecessary-dunder-call`` for unnecessary dunder method calls.
+
+  Closes #5936
+
 * ``potential-index-error``: Emitted when the index of a list or tuple exceeds its length.
   This checker is currently quite conservative to avoid false positives. We welcome
   suggestions for improvements.
